style.css
/* ... */
.pin-container {width: 100%;}

#inspiration-day #pin2 {width: 100%; padding-bottom: 25em; display: flex;}
#inspiration-day #pin1 {
    position: absolute;
    top:20vw;
    width: 100%;
    display: block;
    text-align: center;
    line-height: 1.6;
    z-index: 5;
    padding-bottom: 20em;
}
#inspiration-day .twenty-four-point {
    font-family: "Miller Text Italic";
    color: #ffffff;
}
#twenty-four-hour-give {
    width: 100%;
    margin: 10vw auto 0 auto;
    position: relative;
    display: flex;
    display: -moz-flex;
    display: -ms-flex;
    display: -o-flex;
    display: -webkit-flex;
    flex-direction: column;
    justify-content: center;
}
#twenty-four-hour-give .sixty-point {
    position: relative;
    align-self: flex-end;
    width: 70%;
    margin: -.9em -.1em .5em 0;
}
#twenty-four-hour-give .two-sixty-six-point {
    width: 100%;
    margin-left: -4rem;
}
#twenty-four-hour-give img {
    width: 100%;
}
#twenty-four-hour-give img:hover {
    cursor: pointer;
}
#twenty-four-hour-give .text-block {
    position: absolute;
    bottom: -6vw;
    right: 7vw;
    width: 17vw;
    min-width: 140px;
    height: 17vw;
    min-height: 140px;
    background-color: #dc1e35;
    z-index: 4;
    padding: 2%;
    line-height: 1.3;

}
.modal {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 10; /* Sit on top */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: hidden; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0); /* Black w/ opacity */
}

/* Modal Content/Box */
.modal-content {
    background-color: rgba(0,0,0,0);
    margin: 15% auto; /* 15% from the top and centered */
    padding: 0 20px 20px 20px;
    width: 560px; /* Could be more or less, depending on screen size */
    height: 345px;
}

/* The Close Button */
.close {
    color: #aaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
}

.close:hover,
.close:focus {
    color: #dc1e35;
    text-decoration: none;
    cursor: pointer;
}

#twenty-four-hour-give div p {
    color: #ffffff;
}
#birthday {
    width: 100%;
    position: relative;
    display: flex;
    display: -moz-flex;
    display: -ms-flex;
    display: -o-flex;
    display: -webkit-flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: 10vw;
}
#birthday .text {
    width: 70%;
    display: flex;
    display: -moz-flex;
    display: -ms-flex;
    display: -o-flex;
    display: -webkit-flex;
    flex-direction: column;
    align-items: center;
}
#birthday .text .one {
    align-self: flex-start;
    margin-bottom: -6rem;
    position: relative;
    z-index: 2;
}
#birthday .text .two {
    position: relative;
    z-index: 1;
}
#birthday .text .three {
    position: relative;
    z-index: 2;
    align-self: flex-end;
    margin-top: -6rem;
}
#birthday img {
    width: 100%;
}
#birthday .text-block {
    position: absolute;
    right: 7vw;
    bottom: -6vw;
    width: 13vw;
    min-width: 14rem;
    height: 13vw;
    min-height: 14rem;
    background-color: #dc1e35;
    color: #ffffff;
    z-index: 1;
    padding: 1.5vw;
    line-height: 1.3;
}
#conclusion {
    position: relative;
    display: flex;
    display: -moz-flex;
    display: -ms-flex;
    display: -o-flex;
    display: -webkit-flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    margin: 5vw 0 0 0;
}
#conclusion h3 {
    color: #333e48;
    margin: 2rem 0;
}
#conclusion p {
    color: #dc1e35;
    line-height: 1.3;
}
#conclusion p:nth-of-type(2) {
    margin-bottom: 1.5rem;
}
#conclusion p:last-of-type {
    font-family: "Miller Text Italic";
}
#conclusion img{
    position: relative;
    z-index: 3;
    width: 100%;
}
#footer {
    position: relative;
    background: no-repeat url("assets/AnnualReport_ImageLinks_LastImage_72dpi.jpg");
    background-size: 100%;
    width: 100%;
    height: 100vw;
    overflow-y: visible;
    display: flex;
    display: -moz-flex;
    display: -ms-flex;
    display: -o-flex;
    display: -webkit-flex;
    flex-direction: column;
    align-items: center;
}
#footer div {
    text-align: center;
    position: absolute;
    z-index: 2;
    visibility: visible;
    bottom: 0;
    margin-bottom: 2vw;
}
#footer h3 {
    color: #ffffff;
}
#footer .thirty-eight-point {
    margin: 1vw 0 4vw 0;
}
@media only screen and (max-width: 401px) {
    #inspiration-day #pin1 {
        top:40vw;
    }
}
@media only screen and (min-width: 750px) {
    #title {
        background: no-repeat url("assets/AnnualReport_ImageLinks_1stImage.png");
        background-size: 100%;
        width: 100%;
        height: 100vw;
    }
    #footer {
        background: no-repeat url("assets/AnnualReport_ImageLinks_LastImage.png");
        background-size: 100%;
        width: 100%;
        height: 100vw;
    }
}
/* ... */

